fix icon spacing

--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ a {
 
 .language-icon {
   width: 90px;
+  padding: 5px;
 }
 
 .language-icon-container {
